--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
         android:inputType="textPersonName"
         android:gravity="center"
         android:layout_centerInParent="true"
-        android:text="Digite seu login"
+        android:hint="Digite seu login"
         android:textColor="@color/cardview_dark_background"
         android:ems="10"
         android:layout_marginTop="56dp"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
-        android:id="@+id/button"
+        android:id="@+id/buttonAcessar"
         android:layout_below="@+id/senhaText"
         android:layout_alignStart="@+id/senhaText"
         android:layout_alignEnd="@+id/senhaText"
@@ -70,9 +70,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonCadastro"
-        android:layout_below="@+id/button"
-        android:layout_alignStart="@+id/button"
-        android:layout_alignEnd="@+id/button"
+        android:layout_below="@+id/buttonAcessar"
+        android:layout_alignStart="@+id/buttonAcessar"
+        android:layout_alignEnd="@+id/buttonAcessar"
         style="@style/Widget.AppCompat.Button.Small" />
 
 
